--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
-    "preview": "svelte-kit preview",
-    "publish": "surge /build"
+    "preview": "svelte-kit preview"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^1.0.0-next.11",
